rns-lang/tests/snapshots/error-parser-outside_class_directive-integer_wasm.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
42 ; the answer
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected integer before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/integer.ja:1:1 ]
   │
 1 │ 42 ; the answer
   │ ─┬  
   │  ╰── this integer must appear inside a class definition
   │ 
   │ Note: Integer literals are typically used as instruction arguments inside '.code' blocks.
───╯
----- HASH -----
not generated
